--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "python.languageServer": "Pylance",
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "[python]": {
+    "editor.formatOnPaste": false
+  }
 }
